# VoLtex

./: .gitignore  README.md  install  install-gui  install.sh  pyproject.toml  requirements.txt  run-voltex  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: INSTALL.md  SECURITY.md
packaging/linux/: voltex-reset-session.desktop.in  voltex.desktop.in
scripts/: backup-working-state.sh  install-linux.sh  uninstall-linux.sh
tests/: test_auth_manager.py  test_config.py  test_game_launcher.py  test_portability.py  test_server.py  test_uri.py  test_webview_manager.py
voltex/: auth_manager.py  config.py  diagnostics.py  game_launcher.py  main.py  server.py  updater.py  uri.py  webview_manager.py
